crates/knok-build/tests/ui/missing_cuda_feature.stderr
error[E0599]: no variant or associated item named `Cuda` found for enum `knok_build::Backend` in the current scope
 --> tests/ui/missing_cuda_feature.rs:5:40
  |
5 | #[knok_build::graph(backend = Backend::Cuda)]
  |                                        ^^^^ variant or associated item not found in `knok_build::Backend`
